--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs
+/CodeAssesmentDates/obj
+/TDD.BusinessDaysCounter/bin/Debug/netcoreapp3.1
+/TDD.BusinessDaysCounter/obj
+/BusinessDaysCounter/obj
+/BusinessDaysCounter/bin/Debug/netcoreapp3.1
